--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Birmingham Twp PD \u2014 Sept 2025",
-  "short_name": "BTWP Schedule",
+  "name": "BTWP Sept 2025 Calendar",
+  "short_name": "BTWP Calendar",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#0b57a4",
