--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "BTWP Sept 2025 Calendar",
+  "name": "BTWP Calendar",
   "short_name": "BTWP Calendar",
   "start_url": ".",
   "display": "standalone",
